--- a/677_Notes_Quarto.html
+++ b/677_Notes_Quarto.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Joe Griffiths">
-<meta name="dcterms.date" content="2024-04-30">
+<meta name="dcterms.date" content="2024-05-06">
 
 <title>677 Final</title>
 <style>
@@ -100,7 +100,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">2024-04-30</p>
+      <p class="date">2024-05-06</p>
     </div>
   </div>
   
@@ -241,6 +241,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <p><img src="677_Notes_Quarto_files/figure-html/unnamed-chunk-2-1.png" class="img-fluid" width="672"></p>
 </div>
 </div>
+<p>As shown above, admissible strategies (colored blue)</p>
 </section>
 </section>
 <section id="book-exercises" class="level1">
@@ -292,6 +293,10 @@ sigma_two         4       0.6         0</code></pre>
 <section id="bayes-strategy-function" class="level2">
 <h2 class="anchored" data-anchor-id="bayes-strategy-function">Bayes Strategy Function</h2>
 </section>
+</section>
+<section id="reference" class="level1">
+<h1>Reference</h1>
+<p><span class="math inline">\(1\)</span> Chernoff, H., &amp; Moses, L. E. (1959). Elementary decision theory. John Wiley</p>
 </section>
 
 </main>
